load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@tummycrypt_tinyland_content_types_npm//:defs.bzl", "npm_link_all_packages")
load("@tummycrypt_tinyland_content_types_npm//:vitest/package_json.bzl", vitest_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "tinyland_content_types",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ) + ["package.json"],
    declaration = True,
    declaration_map = True,
    out_dir = "dist",
    root_dir = "src",
    source_map = False,
    transpiler = "tsc",
    tsconfig = ":tsconfig.json",
    validate = False,
    deps = [
        ":node_modules",
        ":node_modules/@types/node",
    ],
)

vitest_bin.vitest_test(
    name = "test",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    data = glob(["src/**/*.ts"]) + glob(["tests/**/*.ts"]) + [
        ":node_modules",
        ":node_modules/vitest",
        ":node_modules/fast-check",
        ":node_modules/@fast-check/vitest",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    log_level = "info",
)

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
        "README.md",
    ],
)

npm_package(
    name = "pkg",
    srcs = [
        ":tinyland_content_types",
        ":README.md",
        ":package.json",
    ],
    package = "@tummycrypt/tinyland-content-types",
    version = "0.3.1",
)
